# data-structure

./: .gitignore  CMakeLists.txt  README.md
Algorithm/: binary_to_string.cpp  count_total_set_bits.cpp  find_GCD.cpp  find_element_that_appears_once.cpp  find_max_contineous_1_in_binary_no.cpp  find_minimum_of_three_no.cpp  find_next_sparse_number.cpp  find_nth_magic_no.cpp  flip_bit_to_win.cpp  little_endian_or_big_endian.cpp  maximum_subarray_XOR.cpp  multiple_of_3_or_not.cpp  rotate_bits_of_no.cpp  sum_of_bit_differences_among_pair.cpp  sum_of_two_no.cpp  swap_all_even_and_odd_bits.cpp  test.cpp
C Programming questions/: factorial.cpp  fibonacci_series.cpp  palindrome.cpp  print_its_own_sourcecode.c
C_Programming_questions/: copy_text_from_one_file_to_another.c  factorial_between_range.cpp  print_own_source_code.cpp  read_last_n_char_from_file.c
Mix_problems/: find_two_missing_numbers.cpp  multiply_with_7.cpp  no_of_bits_flipping.c  prime_no_or_not.cpp  swap_three_variable.cpp
array/: check_for_sum_of_pair_in_array.cpp  count_of_smaller_no_after_self.cpp  detect_one_duplicate_from_sorted_array.cpp  duplicate_elements_with_kth_distance.cpp  find_min_from_sorted_rotated_array.cpp  find_missing_number.cpp  find_no_from_sorted_rotated_array.cpp  find_pair_with_sum_closest_to_x.cpp  first_repeated_no.cpp  kth_largest_element_in_array.cpp  majority_elements.cpp  maximum_sum_subarray.cpp  medin_of_two_sorted_array.cpp  merge_array_of_n_into_n+m.cpp  merge_two_sorted_array_with_space_O1.cpp  next_greater_element.cpp  number_occuring_odd_no_of_times.cpp  reverse_array.cpp  (+7 more)
(+89 files in other folders)
